add structure and positioning to containers.

--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,18 @@ h1 {
     color:white;
     
 }
+
+.wrapper {
+    display:flex;
+    
+
+}
+
+.weather-cards {
+    display:flex;
+    
+}
+
+.city-option {
+    display:block;
+}
