position divs using flex direction, block used to have 5 day forcast underneath the current weather data

--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,16 @@ h1 {
 
 }
 
+.current-city-display{
+    padding-left:50px;
+   
+}
+
+.flex-box {
+   ;
+
+}
+
 .weather-cards {
     display:flex;
     
