--- a/styles.css
+++ b/styles.css
@@ -78,16 +78,21 @@ h1 {
 
 }
 
+
+
+
 .current-city-display {
-    padding-left:30px;
-    padding-top:20px;
+   padding-left:5px;
+    padding-top:10px;
+    border:2px solid black;
+    padding-bottom: 20px;
 }
 
 .current-city-display h2 {
     padding-bottom: 20px;
 }
 
-.current-city {
+.current-date {
     padding-bottom:10px;
 }
 
