--- a/styles.css
+++ b/styles.css
@@ -6,75 +6,78 @@
 }
 
 
+  
+
+
+
 h1 {
     text-align: center;
-    background-color: rgba(0, 0, 255, 0.596);
+    background-color: white;
     margin-bottom: 20px;
     padding-top: 10px;
     height: 50px;
     font-weight: bold;
-    color: white;
+    color: black;
+    border:5px solid white;
 
 }
 
 .wrapper {
     display: flex;
-    padding-left:20px;
-    padding-top:20px;
-    
-
-
+    padding-left: 20px;
+    padding-top: 20px;
+    background-image: url(./images/timothy-eberly-XVE2eMZGrhk-unsplash\ \(1\).jpg);
+    background-size: cover;
 }
 
-
-
-
 .search-header h2 {
-    padding-bottom:5px;
-  
+    padding-bottom: 5px;
+
 }
 
 
 .search-city-input {
-    
-    display:block;
-    height:30px;
+
+    display: block;
+    height: 30px;
     margin-bottom: 10px;
-    
+
 
 
 }
 
 .search-bttn {
     margin-bottom: 30px;
-    width:100%;
+    width: 100%;
 }
 
 
 .search-container {
-    padding-right:20px;
+    padding-right: 20px;
 }
 
 
 
 .weather-cards {
     display: flex;
-    padding-top:10px;
-    
+    padding-top: 10px;
+
 
 
 }
 
 .city-option {
     display: block;
-    width:100%;
-    padding:5px;
-    
-    margin-top:10px;
+    width: 100%;
+    padding: 5px;
+
+    margin-top: 10px;
 }
 
 .fiveday-forcast {
-    padding-top:20px;
+    padding-top: 20px;
+    
+
 
 }
 
@@ -82,9 +85,9 @@ h1 {
 
 
 .current-city-display {
-   padding-left:5px;
-    padding-top:10px;
-    border:2px solid black;
+    padding-left: 5px;
+    padding-top: 10px;
+    border: 2px solid black;
     padding-bottom: 20px;
 }
 
@@ -93,7 +96,7 @@ h1 {
 }
 
 .current-date {
-    padding-bottom:10px;
+    padding-bottom: 10px;
 }
 
 .wind {
@@ -106,62 +109,63 @@ h1 {
 
 
 .monday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
-    margin-right:5px;
+    background-color:rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
+    margin-right: 5px;
 }
 
 .tuesday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
+    background-color:rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
     margin-right: 5px;
 }
 
 
 .wednesday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
     margin-right: 5px;
 }
 
 
 .thursday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
     margin-right: 5px;
 }
 
 
 .friday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
+    background-color:rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
     margin-right: 5px;
 }
 
 
 .saturday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
     margin-right: 5px;
 }
 
 
 .sunday-forcast {
-    background-color:lawngreen;
-    padding:5px;
-    width:20%;
-    height:200px;
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 20%;
+    height: 200px;
     margin-right: 5px;
 }
+
