--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@
 
 }
 
- 
+ body {
+    background-image: url(./image/hanna-plants-JhFYAeYLZTY-unsplash\ \(3\).jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+ }
 
 
 h1 {
@@ -72,14 +76,16 @@ h1 {
     width: 100%;
     padding: 5px;
     background-color:rgba(128, 128, 128, 0.24);
-    border: 2px solid black;
+    border-color: 2px solid white;
     font-weight:bold;
     border-radius:5px;
     margin-top: 10px;
+    color:white;
 }
 
 .fiveday-forcast {
     padding-top: 20px;
+    color:white;
 
 
 }
@@ -93,6 +99,7 @@ h1 {
     border: 2px solid white;
     padding-bottom: 20px;
     background-color:rgba(128, 128, 128, 0.24);
+    
 
 
 }
@@ -122,7 +129,7 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+   
     color:black;
 
 }
@@ -133,7 +140,7 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+    
 
 }
 
@@ -144,7 +151,7 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+   
 
 }
 
@@ -155,7 +162,7 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+   
 
 }
 
@@ -166,7 +173,7 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+    
 
 }
 
@@ -177,7 +184,7 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+    
 
 }
 
@@ -188,6 +195,6 @@ h1 {
     width: 20%;
     height: 200px;
     margin-right: 5px;
-    border:2px solid black;
+    
 }
 
