--- a/styles.css
+++ b/styles.css
@@ -70,15 +70,10 @@ h1 {
 
 .weather-cards {
     display: flex;
-    flex-direction: column;
     padding-top: 10px;
 
 
 
-}
-
-.wrapper-cards {
-display:flex;
 }
 
 .city-option {
@@ -106,20 +101,18 @@ display:flex;
 .current-city-display {
     padding-left: 5px;
     padding-top: 10px;
-    
     padding-bottom: 20px;
     background-color:rgba(128, 128, 128, 0.24);
-    
-
-
-}
+ }
 
 
 .current-city-display h2 {
     padding-bottom: 20px;
     
-   
-    
+}
+
+.current-city-wrapper {
+    width:50%;
 }
 
 .current-date {
@@ -135,10 +128,10 @@ display:flex;
 }
 
 
-.weather-card {
+.monday-forcast {
     background-color:rgba(128, 128, 128, 0.24);
     padding: 5px;
-   
+    width: 30%;
     height: 200px;
     margin-right: 5px;
    
@@ -146,7 +139,69 @@ display:flex;
 
 }
 
+.tuesday-forcast {
+    background-color:rgba(8, 8, 90, 0.747);
+    padding: 5px;
+    width: 30%;
+    height: 200px;
+    margin-right: 5px;
+    
 
+}
+
+
+.wednesday-forcast {
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 30%;
+    height: 200px;
+    margin-right: 5px;
+   
+
+}
+
+
+.thursday-forcast {
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 30%;
+    height: 200px;
+    margin-right: 5px;
+   
+
+}
+
+
+.friday-forcast {
+    background-color:rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 30%;
+    height: 200px;
+    margin-right: 5px;
+    
+
+}
+
+
+.saturday-forcast {
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 30%;
+    height: 200px;
+    margin-right: 5px;
+    
+
+}
+
+
+.sunday-forcast {
+    background-color: rgba(128, 128, 128, 0.24);
+    padding: 5px;
+    width: 30%;
+    height: 200px;
+    margin-right: 5px;
+    
+}
 
 
 .search-history {
