--- a/styles.css
+++ b/styles.css
@@ -67,15 +67,43 @@ h1 {
 }
 
 
-
-.weather-cards {
+.wrapper-cards {
     display: flex;
-    padding-top: 10px;
+    justify-content: space-between;
+    padding-right:10px;
+    
+    
+}
+.temp {
+    padding-left:5px;
+}
+
+.wind {
+    padding-left:5px;
+}
+
+.humidity {
+    padding-left:5px;
+}
+.weather-cards {
+    display: block;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 40px;
+    background-color: #1010f591;
+    border: 2px solid black;
+    width:300px;
+    
 
 
 
 }
 
+.date {
+    padding-left:20px;
+    font-weight: bold;
+    color:yellow;
+}
 .city-option {
     display: block;
     width: 100%;
